# matrix-library

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/mxl/: CMakeLists.txt  Doxyfile  mxl.hpp  naik_aayush.hpp
src/: demo.cpp  main.cpp  matrix.hpp
test/: CMakeLists.txt  test.cpp
